Update on build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,72 +15,50 @@
 # will be met: https://www.gnu.org/licenses/lgpl-3.0.html.
 
 cmake_minimum_required(VERSION 3.3 FATAL_ERROR)
-project (aurorafw)
 
-message(STATUS "Starting framework build system...")
+message(STATUS "Loading framework build system...")
 
-include(${CMAKE_SOURCE_DIR}/build/aurora-config.cmake)
+# Set specific framework build variable
+set(AURORAFW_IS_BUILDING true)
 
-if (NOT CONFIGURED_ONCE)
-	set(AURORAFW_BUILD_DIR ${AURORAFW_ROOT_DIR}/build)
-	set(AURORAFW_MODULES_DIR ${AURORAFW_ROOT_DIR}/modules)
-	set(AURORAFW_APPS_DIR ${AURORAFW_ROOT_DIR}/apps)
-endif()
+# Master include
+set(CMAKE_MODULE_AURORAFW_DIR ${CMAKE_SOURCE_DIR}/cmake/aurora)
+include(${CMAKE_MODULE_AURORAFW_DIR}/module.cmake)
 
+# Options
 option(AURORA_BUILD_TEST_APPS "Enable builds for test apps" OFF)
-option(AURORA_TARGET_DOCUMENTATION "Enable documentation target" ON)
-option(AURORA_DOCUMENTATION_AUTO "Enable automatic documentation building" ON)
+
+AURORA_ADD_CMAKE_MODULE("FreeImage" CMAKE ${AURORAFW_ROOT_DIR}/cmake/freeimage/)
+AURORA_ADD_CMAKE_MODULE("PortAudio" CMAKE ${AURORAFW_ROOT_DIR}/cmake/portaudio/)
 
 # Modules
-set(AURORAFW_MODULE_STDL_DIR ${AURORAFW_MODULES_DIR}/stdl)
-include(${AURORAFW_MODULE_STDL_DIR}/module.cmake)
-set(AURORAFW_MODULE_CORE_DIR ${AURORAFW_MODULES_DIR}/core)
-include(${AURORAFW_MODULE_CORE_DIR}/module.cmake)
-set(AURORAFW_MODULE_MATH_DIR ${AURORAFW_MODULES_DIR}/math)
-include(${AURORAFW_MODULE_MATH_DIR}/module.cmake)
-set(AURORAFW_MODULE_CRYPTO_DIR ${AURORAFW_MODULES_DIR}/crypto)
-include(${AURORAFW_MODULE_CRYPTO_DIR}/module.cmake)
-set(AURORAFW_MODULE_IO_DIR ${AURORAFW_MODULES_DIR}/io)
-include(${AURORAFW_MODULE_IO_DIR}/module.cmake)
-set(AURORAFW_MODULE_CLI_DIR ${AURORAFW_MODULES_DIR}/cli)
-include(${AURORAFW_MODULE_CLI_DIR}/module.cmake)
-set(AURORAFW_MODULE_GUI_DIR ${AURORAFW_MODULES_DIR}/gui)
-include(${AURORAFW_MODULE_GUI_DIR}/module.cmake)
-set(AURORAFW_MODULE_AUDIO_DIR ${AURORAFW_MODULES_DIR}/audio)
-include(${AURORAFW_MODULE_AUDIO_DIR}/module.cmake)
-set(AURORAFW_MODULE_NETSOCKS_DIR ${AURORAFW_MODULES_DIR}/netsocks)
-include(${AURORAFW_MODULE_NETSOCKS_DIR}/module.cmake)
-set(AURORAFW_MODULE_IMAGE_DIR ${AURORAFW_MODULES_DIR}/image)
-include(${AURORAFW_MODULE_IMAGE_DIR}/module.cmake)
+AURORA_ADD_CMAKE_MODULE("STDL" MODULE)
+AURORA_ADD_CMAKE_MODULE("Core" MODULE)
+AURORA_ADD_CMAKE_MODULE("Math" MODULE)
+AURORA_ADD_CMAKE_MODULE("Crypto" MODULE)
+AURORA_ADD_CMAKE_MODULE("IO" MODULE)
+AURORA_ADD_CMAKE_MODULE("CLI" MODULE)
+AURORA_ADD_CMAKE_MODULE("GUI" MODULE)
+AURORA_ADD_CMAKE_MODULE("Audio" MODULE)
+AURORA_ADD_CMAKE_MODULE("NetSocks" MODULE)
+AURORA_ADD_CMAKE_MODULE("Image" MODULE)
+AURORA_ADD_CMAKE_MODULE("GEngine Core" MODULE)
+AURORA_ADD_CMAKE_MODULE("GEngine OpenGL" MODULE)
+AURORA_ADD_CMAKE_MODULE("GEngine Vulkan" MODULE)
+AURORA_ADD_CMAKE_MODULE("GEngine Direct3D" MODULE)
+AURORA_ADD_CMAKE_MODULE("GEngine Shaders" MODULE)
 
-#Graphics Engine
-set(AURORAFW_MODULE_GENGINE_CORE_DIR ${AURORAFW_MODULES_DIR}/gengine/core)
-include(${AURORAFW_MODULE_GENGINE_CORE_DIR}/module.cmake)
-set(AURORAFW_MODULE_GENGINE_OPENGL_DIR ${AURORAFW_MODULES_DIR}/gengine/opengl)
-include(${AURORAFW_MODULE_GENGINE_OPENGL_DIR}/module.cmake)
-set(AURORAFW_MODULE_GENGINE_VULKAN_DIR ${AURORAFW_MODULES_DIR}/gengine/vulkan)
-include(${AURORAFW_MODULE_GENGINE_VULKAN_DIR}/module.cmake)
-set(AURORAFW_MODULE_GENGINE_DIRECT3D_DIR ${AURORAFW_MODULES_DIR}/gengine/direct3d)
-include(${AURORAFW_MODULE_GENGINE_DIRECT3D_DIR}/module.cmake)
-
-#Test Apps
+# Apps
 if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
-	set(AURORAFW_APP_TESTS_STDL_DIR ${AURORAFW_APPS_DIR}/tests/tlib)
-	include(${AURORAFW_APP_TESTS_STDL_DIR}/app.cmake)
-	set(AURORAFW_APP_TESTS_GUI_DIR ${AURORAFW_APPS_DIR}/tests/gui)
-	include(${AURORAFW_APP_TESTS_GUI_DIR}/app.cmake)
-	set(AURORAFW_APP_TESTS_GENGINE_DIR ${AURORAFW_APPS_DIR}/tests/gengine)
-	include(${AURORAFW_APP_TESTS_GENGINE_DIR}/app.cmake)
-	set(AURORAFW_APP_TESTS_CRYPTO_DIR ${AURORAFW_APPS_DIR}/tests/crypto)
-	include(${AURORAFW_APP_TESTS_CRYPTO_DIR}/app.cmake)
-	set(AURORAFW_APP_TESTS_CLI_DIR ${AURORAFW_APPS_DIR}/tests/cli)
-	include(${AURORAFW_APP_TESTS_CLI_DIR}/app.cmake)
-	set(AURORAFW_APP_TESTS_MATH_DIR ${AURORAFW_APPS_DIR}/tests/math)
-	include(${AURORAFW_APP_TESTS_MATH_DIR}/app.cmake)
-	set(AURORAFW_APP_TESTS_NETSOCKS_DIR ${AURORAFW_APPS_DIR}/tests/netsocks)
-	include(${AURORAFW_APP_TESTS_NETSOCKS_DIR}/app.cmake)
-	set(AURORAFW_APP_TESTS_IMAGE_DIR ${AURORAFW_APPS_DIR}/tests/image)
-	include(${AURORAFW_APP_TESTS_IMAGE_DIR}/app.cmake)
+	# Test Apps
+	#AURORA_ADD_CMAKE_MODULE("Tests STDL" APP)
+	AURORA_ADD_CMAKE_MODULE("Tests GUI" APP)
+	AURORA_ADD_CMAKE_MODULE("Tests GEngine" APP)
+	AURORA_ADD_CMAKE_MODULE("Tests Crypto" APP)
+	AURORA_ADD_CMAKE_MODULE("Tests CLI" APP)
+	AURORA_ADD_CMAKE_MODULE("Tests Math" APP)
+	AURORA_ADD_CMAKE_MODULE("Tests NetSocks" APP)
+	AURORA_ADD_CMAKE_MODULE("Tests Image" APP)
 endif()
 
 #Doxygen specific configuration
@@ -119,5 +97,3 @@ if(AURORA_TARGET_DOCUMENTATION)
 		add_dependencies(clear clean-docs)
 	ENDIF (DOXYGEN_FOUND)
 endif()
-
-message(STATUS "Build system loaded")
