Fix temporary error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ AURORA_ADD_CMAKE_MODULE("GEngine Core" MODULE)
 AURORA_ADD_CMAKE_MODULE("GEngine OpenGL" MODULE)
 AURORA_ADD_CMAKE_MODULE("GEngine Vulkan" MODULE)
 AURORA_ADD_CMAKE_MODULE("GEngine Direct3D" MODULE)
-AURORA_ADD_CMAKE_MODULE("GEngine Shaders" MODULE)
+#AURORA_ADD_CMAKE_MODULE("GEngine Shaders" MODULE)
 
 # Apps
 if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
