Update build system, add apps cmake module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ AURORA_ADD_CMAKE_MODULE("GEngine Direct3D" MODULE)
 # Apps
 if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
 	# Test Apps
-	#AURORA_ADD_CMAKE_MODULE("Tests STDL" APP)
+	AURORA_ADD_CMAKE_MODULE("Tests STDL" APP)
 	AURORA_ADD_CMAKE_MODULE("Tests GUI" APP)
 	AURORA_ADD_CMAKE_MODULE("Tests GEngine" APP)
 	AURORA_ADD_CMAKE_MODULE("Tests Crypto" APP)
@@ -62,6 +62,7 @@ if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
 	AURORA_ADD_CMAKE_MODULE("Tests Math" APP)
 	AURORA_ADD_CMAKE_MODULE("Tests NetSocks" APP)
 	AURORA_ADD_CMAKE_MODULE("Tests Image" APP)
+	AURORA_ADD_CMAKE_MODULE("Tests Audio" APP)
 endif()
 
 #Doxygen specific configuration
