--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,13 +37,14 @@ endif()
 # Modules
 AURORA_ADD_CMAKE_MODULE("STDL" MODULE)
 AURORA_ADD_CMAKE_MODULE("Core" MODULE)
+AURORA_ADD_CMAKE_MODULE("CoreLib" MODULE)
 AURORA_ADD_CMAKE_MODULE("Math" MODULE)
 AURORA_ADD_CMAKE_MODULE("Crypto" MODULE)
 AURORA_ADD_CMAKE_MODULE("IO" MODULE)
 AURORA_ADD_CMAKE_MODULE("CLI" MODULE)
 AURORA_ADD_CMAKE_MODULE("GUI" MODULE)
 AURORA_ADD_CMAKE_MODULE("Audio" MODULE)
-AURORA_ADD_CMAKE_MODULE("NetSocks" MODULE)
+AURORA_ADD_CMAKE_MODULE("Netsocks" MODULE)
 AURORA_ADD_CMAKE_MODULE("Image" MODULE)
 AURORA_ADD_CMAKE_MODULE("GEngine Core" MODULE)
 AURORA_ADD_CMAKE_MODULE("GEngine OpenGL" MODULE)
