Add cmake modules include macros for d and swig binds
Signed-off-by: Luís Ferreira <lsferreira169@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,38 @@ AURORA_ADD_CMAKE_MODULE("GEngine Vulkan" MODULE)
 AURORA_ADD_CMAKE_MODULE("GEngine Direct3D" MODULE)
 #AURORA_ADD_CMAKE_MODULE("GEngine Shaders" MODULE)
 
+#AURORA_ADD_CMAKE_MODULE("D CoreLib" BIND)
+#AURORA_ADD_CMAKE_MODULE("D STDL" BIND)
+#AURORA_ADD_CMAKE_MODULE("D Core" BIND)
+#AURORA_ADD_CMAKE_MODULE("D Math" BIND)
+#AURORA_ADD_CMAKE_MODULE("D Crypto" BIND)
+#AURORA_ADD_CMAKE_MODULE("D IO" BIND)
+#AURORA_ADD_CMAKE_MODULE("D CLI" BIND)
+#AURORA_ADD_CMAKE_MODULE("D GUI" BIND)
+#AURORA_ADD_CMAKE_MODULE("D Audio" BIND)
+#AURORA_ADD_CMAKE_MODULE("D Netsocks" BIND)
+#AURORA_ADD_CMAKE_MODULE("D Image" BIND)
+#AURORA_ADD_CMAKE_MODULE("D GEngine Core" BIND)
+#AURORA_ADD_CMAKE_MODULE("D GEngine OpenGL" BIND)
+#AURORA_ADD_CMAKE_MODULE("D GEngine Vulkan" BIND)
+#AURORA_ADD_CMAKE_MODULE("D GEngine Direct3D" BIND)
+
+#AURORA_ADD_CMAKE_MODULE("SWIG CoreLib" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG STDL" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG Core" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG Math" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG Crypto" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG IO" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG CLI" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG GUI" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG Audio" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG Netsocks" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG Image" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG GEngine Core" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG GEngine OpenGL" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG GEngine Vulkan" BIND)
+#AURORA_ADD_CMAKE_MODULE("SWIG GEngine Direct3D" BIND)
+
 # Apps
 if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
 	# Test Apps
