Updates on build system
Signed-off-by: Luís Ferreira <lsferreira169@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,78 +25,85 @@ set(AURORAFW_IS_BUILDING true)
 set(CMAKE_MODULE_AURORAFW_DIR ${CMAKE_SOURCE_DIR}/cmake/aurora)
 include(${CMAKE_MODULE_AURORAFW_DIR}/module.cmake)
 
+#aurorafw_print_debug_vars()
+
 # Options
 option(AURORA_BUILD_TEST_APPS "Enable builds for test apps" OFF)
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
-	AURORA_ADD_CMAKE_MODULE("FreeImage" CMAKE ${AURORAFW_ROOT_DIR}/cmake/freeimage)
-	AURORA_ADD_CMAKE_MODULE("PortAudio" CMAKE ${AURORAFW_ROOT_DIR}/cmake/portaudio)
-	AURORA_ADD_CMAKE_MODULE("sndfile" CMAKE ${AURORAFW_ROOT_DIR}/cmake/sndfile)
+	AURORAFW_ADD_CMAKE_MODULE("FreeImage" CMAKE ${AURORAFW_ROOT_DIR}/cmake/freeimage)
+	AURORAFW_ADD_CMAKE_MODULE("PortAudio" CMAKE ${AURORAFW_ROOT_DIR}/cmake/portaudio)
+	AURORAFW_ADD_CMAKE_MODULE("sndfile" CMAKE ${AURORAFW_ROOT_DIR}/cmake/sndfile)
+	AURORAFW_ADD_CMAKE_MODULE("Vulkan" CMAKE ${AURORAFW_ROOT_DIR}/cmake/vulkan)
+	AURORAFW_ADD_CMAKE_MODULE("OSMesa" CMAKE ${AURORAFW_ROOT_DIR}/cmake/osmesa)
+	#AURORAFW_ADD_CMAKE_MODULE("Mir" CMAKE ${AURORAFW_ROOT_DIR}/cmake/mir)
+	#AURORAFW_ADD_CMAKE_MODULE("Wayland" CMAKE ${AURORAFW_ROOT_DIR}/cmake/wayland)
+	#AURORAFW_ADD_CMAKE_MODULE("XKB" CMAKE ${AURORAFW_ROOT_DIR}/cmake/xkb)
 endif()
 
 # Modules
-AURORA_ADD_CMAKE_MODULE("CoreLib" MODULE)
-AURORA_ADD_CMAKE_MODULE("STDL" MODULE)
-AURORA_ADD_CMAKE_MODULE("Core" MODULE)
-AURORA_ADD_CMAKE_MODULE("Math" MODULE)
-AURORA_ADD_CMAKE_MODULE("Crypto" MODULE)
-AURORA_ADD_CMAKE_MODULE("IO" MODULE)
-AURORA_ADD_CMAKE_MODULE("CLI" MODULE)
-AURORA_ADD_CMAKE_MODULE("GUI" MODULE)
-AURORA_ADD_CMAKE_MODULE("Audio" MODULE)
-AURORA_ADD_CMAKE_MODULE("Netsocks" MODULE)
-AURORA_ADD_CMAKE_MODULE("Image" MODULE)
-AURORA_ADD_CMAKE_MODULE("GEngine Core" MODULE)
-AURORA_ADD_CMAKE_MODULE("GEngine OpenGL" MODULE)
-AURORA_ADD_CMAKE_MODULE("GEngine Vulkan" MODULE)
-AURORA_ADD_CMAKE_MODULE("GEngine Direct3D" MODULE)
-#AURORA_ADD_CMAKE_MODULE("GEngine Shaders" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("CoreLib" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("STDL" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("Core" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("Math" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("Crypto" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("IO" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("CLI" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("GUI" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("Audio" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("Netsocks" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("Image" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("GEngine Core" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("GEngine OpenGL" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("GEngine Vulkan" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("GEngine Direct3D" MODULE)
+#AURORAFW_ADD_CMAKE_MODULE("GEngine Shaders" MODULE)
 
-#AURORA_ADD_CMAKE_MODULE("D CoreLib" BIND)
-#AURORA_ADD_CMAKE_MODULE("D STDL" BIND)
-#AURORA_ADD_CMAKE_MODULE("D Core" BIND)
-#AURORA_ADD_CMAKE_MODULE("D Math" BIND)
-#AURORA_ADD_CMAKE_MODULE("D Crypto" BIND)
-#AURORA_ADD_CMAKE_MODULE("D IO" BIND)
-#AURORA_ADD_CMAKE_MODULE("D CLI" BIND)
-#AURORA_ADD_CMAKE_MODULE("D GUI" BIND)
-#AURORA_ADD_CMAKE_MODULE("D Audio" BIND)
-#AURORA_ADD_CMAKE_MODULE("D Netsocks" BIND)
-#AURORA_ADD_CMAKE_MODULE("D Image" BIND)
-#AURORA_ADD_CMAKE_MODULE("D GEngine Core" BIND)
-#AURORA_ADD_CMAKE_MODULE("D GEngine OpenGL" BIND)
-#AURORA_ADD_CMAKE_MODULE("D GEngine Vulkan" BIND)
-#AURORA_ADD_CMAKE_MODULE("D GEngine Direct3D" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D CoreLib" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D STDL" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D Core" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D Math" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D Crypto" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D IO" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D CLI" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D GUI" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D Audio" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D Netsocks" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D Image" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D GEngine Core" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D GEngine OpenGL" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D GEngine Vulkan" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("D GEngine Direct3D" BIND)
 
-#AURORA_ADD_CMAKE_MODULE("SWIG CoreLib" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG STDL" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG Core" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG Math" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG Crypto" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG IO" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG CLI" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG GUI" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG Audio" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG Netsocks" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG Image" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG GEngine Core" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG GEngine OpenGL" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG GEngine Vulkan" BIND)
-#AURORA_ADD_CMAKE_MODULE("SWIG GEngine Direct3D" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG CoreLib" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG STDL" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG Core" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG Math" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG Crypto" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG IO" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG CLI" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG GUI" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG Audio" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG Netsocks" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG Image" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG GEngine Core" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG GEngine OpenGL" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG GEngine Vulkan" BIND)
+#AURORAFW_ADD_CMAKE_MODULE("SWIG GEngine Direct3D" BIND)
 
 # Apps
 if((CMAKE_BUILD_TYPE MATCHES Debug) OR (AURORA_BUILD_TEST_APPS))
 	# Test Apps
-	AURORA_ADD_CMAKE_MODULE("Tests STDL" APP)
-	AURORA_ADD_CMAKE_MODULE("Tests GUI" APP)
-	AURORA_ADD_CMAKE_MODULE("Tests GEngine" APP)
-	AURORA_ADD_CMAKE_MODULE("Tests Crypto" APP)
-	AURORA_ADD_CMAKE_MODULE("Tests CLI" APP)
-	AURORA_ADD_CMAKE_MODULE("Tests Math" APP)
-	AURORA_ADD_CMAKE_MODULE("Tests NetSocks" APP)
-	AURORA_ADD_CMAKE_MODULE("Tests Image" APP)
-	AURORA_ADD_CMAKE_MODULE("Tests Audio" APP)
+	AURORAFW_ADD_CMAKE_MODULE("Tests STDL" APP)
+	AURORAFW_ADD_CMAKE_MODULE("Tests GUI" APP)
+	AURORAFW_ADD_CMAKE_MODULE("Tests GEngine" APP)
+	AURORAFW_ADD_CMAKE_MODULE("Tests Crypto" APP)
+	AURORAFW_ADD_CMAKE_MODULE("Tests CLI" APP)
+	AURORAFW_ADD_CMAKE_MODULE("Tests Math" APP)
+	AURORAFW_ADD_CMAKE_MODULE("Tests NetSocks" APP)
+	AURORAFW_ADD_CMAKE_MODULE("Tests Image" APP)
+	AURORAFW_ADD_CMAKE_MODULE("Tests Audio" APP)
 endif()
 
 
-AURORA_ADD_CMAKE_MODULE("Documentation" CMAKE ${AURORAFW_ROOT_DIR}/docs)
+AURORAFW_ADD_CMAKE_MODULE("Documentation" CMAKE ${AURORAFW_ROOT_DIR}/docs)
