--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ AURORAFW_ADD_CMAKE_MODULE("Audio" MODULE)
 AURORAFW_ADD_CMAKE_MODULE("Netsocks" MODULE)
 AURORAFW_ADD_CMAKE_MODULE("Image" MODULE)
 AURORAFW_ADD_CMAKE_MODULE("GEngine Core" MODULE)
+AURORAFW_ADD_CMAKE_MODULE("GEngine 2D" MODULE)
 AURORAFW_ADD_CMAKE_MODULE("GEngine OpenGL" MODULE)
 AURORAFW_ADD_CMAKE_MODULE("GEngine Vulkan" MODULE)
 AURORAFW_ADD_CMAKE_MODULE("GEngine Direct3D" MODULE)
